--- a/projetos/templates/projetos/analise_notas.html
+++ b/projetos/templates/projetos/analise_notas.html
@@ -80,7 +80,7 @@
                         dataArr.map(data => {
                             sum += data;
                         });
-                        if(sum>0) {
+                        if(sum>0 && value>0) {
                             return (value*100 / sum).toFixed(1)+"%";
                         } else {
                             return " ";
@@ -126,7 +126,7 @@
                         dataArr.map(data => {
                             sum += data;
                         });
-                        if(sum>0) {
+                        if(sum>0 && value>0) {
                             return (value*100 / sum).toFixed(1)+"%";
                         } else {
                             return " ";
@@ -171,7 +171,7 @@
                         dataArr.map(data => {
                             sum += data;
                         });
-                        if(sum>0) {
+                        if(sum>0 && value>0) {
                             return (value*100 / sum).toFixed(1)+"%";
                         } else {
                             return " ";
@@ -216,7 +216,7 @@
                         dataArr.map(data => {
                             sum += data;
                         });
-                        if(sum>0) {
+                        if(sum>0 && value>0) {
                             return (value*100 / sum).toFixed(1)+"%";
                         } else {
                             return " ";
@@ -263,7 +263,7 @@
                         dataArr.map(data => {
                             sum += data;
                         });
-                        if(sum>0) {
+                        if(sum>0 && value>0) {
                             return (value*100 / sum).toFixed(1)+"%";
                         } else {
                             return " ";
@@ -308,7 +308,7 @@
                         dataArr.map(data => {
                             sum += data;
                         });
-                        if(sum>0) {
+                        if(sum>0 && value>0) {
                             return (value*100 / sum).toFixed(1)+"%";
                         } else {
                             return " ";
@@ -353,7 +353,7 @@
                         dataArr.map(data => {
                             sum += data;
                         });
-                        if(sum>0) {
+                        if(sum>0 && value>0) {
                             return (value*100 / sum).toFixed(1)+"%";
                         } else {
                             return " ";
