--- a/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
+++ b/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
@@ -18,6 +18,8 @@
 
 {% block content %}
 
+  {% include "impressora.html" %}
+
   <span class="titulo">Prospecçõa de Organizações para propostas a partir de {{ano}}.{{semestre}}</span>
 
   <label for="periodo">Período:</label>
@@ -47,7 +49,6 @@
     <option value="4" {% if filtro == "notificada" %}selected="selected"{% endif %}>notificada</option>
     <option value="5" {% if filtro == "sem_grupo" %}selected="selected"{% endif %}>sem grupo</option>
     <option value="6" {% if filtro == "documentada" %}selected="selected"{% endif %}>documentada</option>
-    
   </select>
 
   <br><br>
@@ -73,23 +74,27 @@
             Organização
           </th>
 
-          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(2)')" style="cursor:pointer;" width="85em" class="text-center">
+          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(2)')" style="cursor:pointer;" width="48em" class="text-center">
+            Área
+          </th>
+
+          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(3)')" style="cursor:pointer;" width="85em" class="text-center">
             Interesse
           </th>
 
-          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" width="97em" class="text-center">
+          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" width="97em" class="text-center">
             Último<br>Contato
           </th>
           
-          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">
-            Mensagem
+          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">
+            Anotação
           </th>
           
-          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" width="81em" class="text-center">
+          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(6)')" style="cursor:pointer" width="81em" class="text-center">
             <a data-toggle="tooltip" data-html="true" animation="true" title="Contando somente as propostas já autorizadas e disponibilizadas para os estudantes aplicarem"><small>Propostas<br>Disponíveis</small>
           </th>
 
-          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(6)')" style="cursor:pointer" width="81em" class="text-center">
+          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(7)')" style="cursor:pointer" width="81em" class="text-center">
             <a data-toggle="tooltip" data-html="true" animation="true" title="Contando todas as propostas submetidas pela organização, mesmo aquelas que não estão disponibilizadas para os estudantes aplicarem"><small>Propostas<br>Enviadas</small>
           </th>
         </tr>
@@ -119,9 +124,17 @@
           {% endif %}
           >
             <td>
-              <a href="{% url 'organizacao_completo' organizacao.id %}" target="_blank">
+              <a class="imprimir" href="{% url 'organizacao_completo' organizacao.id %}" target="_blank">
                 {{organizacao.nome}}
               </a>
+            </td>
+
+            <td style="text-align:center">
+              <small >
+                 <span id="{{organizacao.id}}C" onclick="areas('{{organizacao.id}}','C')" {% if not organizacao.area_computacao %}style="color:lightgray"{% endif %}>C</span
+                ><span id="{{organizacao.id}}M" onclick="areas('{{organizacao.id}}','M')" {% if not organizacao.area_mecanica %}style="color:lightgray"{% endif %}>M</span
+                ><span id="{{organizacao.id}}X" onclick="areas('{{organizacao.id}}','X')" {% if not organizacao.area_mecatronica %}style="color:lightgray"{% endif %}>X</span>
+              </small>
             </td>
 
             <td style="text-align:center">
@@ -146,13 +159,14 @@
               {% if not contato %}
                 <div style="float:left;width: 95%;">
                   <a
+                    class="imprimir" 
                     id='organizacao{{organizacao.id}}'
                     data-organizacao='{{organizacao.id}}'
                     class="edit-annotation"
                     >---------</a
                   >
                 </div>
-                <div style="float:right;">
+                <div class="esconder" style="float:right;">
                   <a
                     data-organizacao='{{organizacao.id}}'
                     class="create-annotation"
@@ -165,6 +179,7 @@
                 {% comment %} {{contato.texto}} {% endcomment %}
                   <div style="float:left;width: 95%;">
                     <a
+                      class="imprimir" 
                       id='organizacao{{organizacao.id}}'
                       data-organizacao='{{organizacao.id}}'
                       class="edit-annotation"
@@ -174,7 +189,7 @@
                       >{{contato.texto}}</a
                     >
                   </div>
-                  <div style="float:right;">
+                  <div class="esconder" style="float:right;">
                     <a
                       data-organizacao='{{organizacao.id}}'
                       class="create-annotation"
@@ -296,6 +311,37 @@
       });
 
     }
+
+
+
+    function areas(id, curso) {
+
+      var situacao = false;
+
+      if($('#'+id+curso).css("color") == 'rgb(211, 211, 211)') {
+        $('#'+id+curso).css("color", "black");
+        situacao = true;
+      } else {
+        $('#'+id+curso).css("color", "lightgray");
+      }
+
+      $.ajax({
+        url: '{% url "areas" %}',
+        data: {
+          'organizacao': id,
+          'curso': curso,
+          'situacao': situacao,
+        },
+        dataType: 'json',
+        success: function (data) {
+          if (data.atualizado) {
+            console.log("Valor atualizado.");
+          }
+        }
+      });
+
+    }
+
   </script>
 
   <script type="text/javascript">
