--- a/professores/templates/professores/index_professor.html
+++ b/professores/templates/professores/index_professor.html
@@ -23,9 +23,10 @@
         <a href="{% url 'distribuicao_areas' %}"><li>Tendência de Áreas de Interesse (Estudantes/Propostas/Projetos)</li></a>
     </ul>
 
-    <h5>Feedbacks</h5>
+    <h5>Feedbacks das Organizações Parceiras</h5>
     <ul>
-        <a href="{% url 'lista_feedback' %}"><li>Organizações Parceiras</li></a>
+        <a href="{% url 'lista_acompanhamento' %}"><li>Acompanhamento Intermediário</li></a>
+        <a href="{% url 'lista_feedback' %}"><li>Comentários Finais</li></a>
     </ul>
 
     <h5>Avaliações</h5>
