mostra áreas de projetos das empresas

--- a/organizacoes/templates/organizacoes/organizacao_completo.html
+++ b/organizacoes/templates/organizacoes/organizacao_completo.html
@@ -40,6 +40,19 @@
     <strong>Informações sobre a empresa :</strong> {{ organizacao.informacoes|linebreaks }}
   {% endif %}
 
+  {% if organizacao.informacoes %}
+    <strong>Informações sobre a empresa :</strong> {{ organizacao.informacoes|linebreaks }}
+  {% endif %}
+
+  {% if organizacao.area_computacao or organizacao.area_mecatronica or organizacao.area_mecanica %}
+     <strong>Áreas de projetos :</strong>
+    {% if organizacao.area_computacao %}Computação{% endif %}{% if organizacao.area_mecatronica or organizacao.area_mecanica %}, {% endif %}
+    {% if organizacao.area_mecatronica %}Mecatrônica{% endif %}{% if organizacao.area_mecanica %}, {% endif %}
+    {% if organizacao.area_mecanica %}Mecânica {% endif %}
+    <br>
+  {% endif %}
+
+
   <br><strong>contato(s):</strong>
   <small><a href="{% url 'cadastrar_usuario' %}?tipo=parceiro&organizacao={{organizacao.id}}">&#10133;</a></small>
   <br>
