--- a/professores/templates/professores/index_professor.html
+++ b/professores/templates/professores/index_professor.html
@@ -36,6 +36,7 @@
         <a href="{% url 'evolucao_notas' %}"><li>Evolução por Notas/Conceitos</li></a>
         <a href="{% url 'analise_objetivos' %}"><li>Análise por Objetivos de Aprendizado</li></a>
         <a href="{% url 'evolucao_objetivos' %}"><li>Evolução por Objetivos de Aprendizado</li></a>
+        <a href="{% url 'certificacao_falconi' %}"><li>Certificações Falconi</li></a>
     </ul>
 
     <p>&nbsp;</p>
