--- a/propostas/templates/propostas/propostas_apresentadas.html
+++ b/propostas/templates/propostas/propostas_apresentadas.html
@@ -203,15 +203,27 @@
             </td>
 
             <td class="organizacao">
-              {% if proposta.organizacao %}
-                <a href="{% url 'organizacao_completo' proposta.organizacao.id %}">
-                  {{ proposta.organizacao.nome }}
-                </a>
-              {% elif proposta.nome_organizacao %}
-                {{ proposta.nome_organizacao }}
-              {% else %}
-                Organização não definida.
-              {% endif %}
+              <div id="proposta{{proposta.id}}" style="float:left;width: 85%;">
+                {% if proposta.organizacao %}
+                  <a href="{% url 'organizacao_completo' proposta.organizacao.id %}">
+                    {{ proposta.organizacao.nome }}
+                  </a>
+                {% elif proposta.nome_organizacao %}
+                  {{ proposta.nome_organizacao }}
+                {% else %}
+                  Organização não definida.
+                {% endif %}  
+              </div>
+              <div class="esconder" style="float:right;">
+                <a
+                  data-proposta='{{proposta.id}}'
+                  class="link-organizacao"
+                  href="{% url 'link_organizacao' proposta.id %}"
+                  data-url="{% url 'link_organizacao' proposta.id %}"
+                  ><small>&#128279;</small></a
+                >
+              </div>
+              
             </td>
             
             <td class="text-center estudantes">
@@ -431,6 +443,8 @@
   <h5>Plot Ternário de Propostas entre Cursos</h5>
   <div id="plot">
   </div>
+
+  {% include "organizacao-modal.html" %}
 
   {% comment %} <script charset="UTF-8" src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.2.0/d3.min.js"></script> {% endcomment %}
   <script charset="UTF-8" src="{% static 'd3/d3.min.js' %}"></script>
